lib/janet.h

/* For encapsulating all thread-local Janet state (except natives) */
typedef struct JanetVM JanetVM;
/* Use type punning for GC objects */
typedef struct JanetGCObject JanetGCObject;
typedef struct JanetBuffer JanetBuffer;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
typedef struct JanetKV JanetKV;
typedef struct JanetAbstractType JanetAbstractType;
typedef struct JanetMethod JanetMethod;
typedef struct JanetView JanetView;
typedef struct JanetByteView JanetByteView;
typedef struct JanetDictView JanetDictView;
typedef struct JanetRange JanetRange;
typedef struct JanetRNG JanetRNG;
/* Basic types for all Janet Values */
typedef enum JanetType {
  JANET_NUMBER,
  JANET_NIL,
  JANET_BOOLEAN,
  JANET_FIBER,
  JANET_STRING,
  JANET_SYMBOL,
  JANET_KEYWORD,
  JANET_ARRAY,
  JANET_TUPLE,
  JANET_TABLE,
  JANET_STRUCT,
  JANET_BUFFER,
  JANET_FUNCTION,
  JANET_CFUNCTION,
  JANET_ABSTRACT,
  JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
  uint64_t u64;
  int64_t i64;
  double number;
  void *pointer;
};
typedef union Janet Janet;
union Janet {
  struct {
#ifdef JANET_BIG_ENDIAN
    uint32_t type;
    union {
      int32_t integer;
      void *pointer;
    } payload;
#else
    union {
      int32_t integer;
      void *pointer;
    } payload;
    uint32_t type;
#endif
  } tagged;
  double number;
  uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
  union {
    uint64_t u64;
    double number;
    int32_t integer;
    void *pointer;
    const void *cpointer;
  } as;
  JanetType type;
};
/* C functions */
typedef Janet (*JanetCFunction)(int32_t argc, Janet *argv);
typedef struct JanetStream JanetStream;
/* Wrapper around file descriptors and HANDLEs that can be polled. */
struct JanetStream {
  JanetHandle handle;
  uint32_t flags;
  uint32_t index;
  JanetFiber *read_fiber;
  JanetFiber *write_fiber;
  const void *methods; /* Methods for this stream */
};
typedef void (*JanetEVCallback)(JanetFiber *fiber, JanetAsyncEvent event);
/* GC Object type pun. The lower 16 bits of flags are reserved for the garbage
 * collector, but the upper 16 can be used per type for custom flags. The
 * current collector is a linked list of blocks, which is naive but works. */
struct JanetGCObject {
  int32_t flags;
  union {
    JanetGCObject *next;
    volatile JanetAtomicInt refcount; /* For threaded abstract types */
  } data;
};
/* A lightweight green thread in janet. Does not correspond to
 * operating system threads. */
struct JanetFiber {
  JanetGCObject gc;   /* GC Object stuff */
  int32_t flags;      /* More flags */
  int32_t frame;      /* Index of the stack frame */
  int32_t stackstart; /* Beginning of next args */
  int32_t stacktop; /* Top of stack. Where values are pushed and popped from. */
  int32_t capacity; /* How big is the stack memory */
  int32_t maxstack; /* Arbitrary defined limit for stack overflow */
  JanetTable *env;  /* Dynamic bindings table (usually current environment). */
  Janet *data;      /* Dynamically resized stack memory */
  JanetFiber
      *child; /* Keep linked list of fibers for restarting pending fibers */
  Janet last_value; /* Last returned value from a fiber */
#ifdef JANET_EV
  /* These fields are only relevant for fibers that are used as "root fibers" -
   * that is, fibers that are scheduled on the event loop and behave much like
   * threads in a multi-tasking system. It would be possible to move these
   * fields to a new type, say "JanetTask", that as separate from fibers to save
   * a bit of space. */
  uint32_t sched_id; /* Increment everytime fiber is scheduled by event loop */
  JanetEVCallback ev_callback; /* Call this before starting scheduled fibers */
  JanetStream *ev_stream;      /* which stream we are waiting on */
  void *ev_state; /* Extra data for ev callback state. On windows, first element
                     must be OVERLAPPED. */
  void *supervisor_channel; /* Channel to push self to when complete */
#endif
};
/* A byte buffer type. Used as a mutable string or string builder. */
struct JanetBuffer {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  uint8_t *data;
};
/* A mutable associative data type. Backed by a hashtable. */
struct JanetTable {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  int32_t deleted;
  JanetKV *data;
  JanetTable *proto;
};
/* A key value pair in a struct or table */
struct JanetKV {
  Janet key;
  Janet value;
};
/* A context for marshaling and unmarshaling abstract types */
typedef struct {
  void *m_state;
  void *u_state;
  int flags;
  const uint8_t *data;
  const JanetAbstractType *at;
} JanetMarshalContext;
/* Defines an abstract type */
struct JanetAbstractType {
  const char *name;
  int (*gc)(void *data, size_t len);
  int (*gcmark)(void *data, size_t len);
  int (*get)(void *data, Janet key, Janet *out);
  void (*put)(void *data, Janet key, Janet value);
  void (*marshal)(void *p, JanetMarshalContext *ctx);
  void *(*unmarshal)(JanetMarshalContext *ctx);
  void (*tostring)(void *p, JanetBuffer *buffer);
  int (*compare)(void *lhs, void *rhs);
  int32_t (*hash)(void *p, size_t len);
  Janet (*next)(void *p, Janet key);
  Janet (*call)(void *p, int32_t argc, Janet *argv);
  size_t (*length)(void *p, size_t len);
  JanetByteView (*bytes)(void *p, size_t len);
};
struct JanetMethod {
  const char *name;
  JanetCFunction cfun;
};
struct JanetView {
  const Janet *items;
  int32_t len;
};
struct JanetByteView {
  const uint8_t *bytes;
  int32_t len;
};
struct JanetDictView {
  const JanetKV *kvs;
  int32_t len;
  int32_t cap;
};
struct JanetRange {
  int32_t start;
  int32_t end;
};
struct JanetRNG {
  uint32_t a, b, c, d;
  uint32_t counter;
};
typedef struct JanetFile JanetFile;
struct JanetFile {
  FILE *file;
  int32_t flags;
};
/* For janet_try and janet_restore */
typedef struct {
  /* old state */
  int32_t stackn;
  int gc_handle;
  JanetFiber *vm_fiber;
  jmp_buf *vm_jmp_buf;
  Janet *vm_return_reg;
  /* new state */
  jmp_buf buf;
  Janet payload;
} JanetTryState;
/***** END SECTION TYPES *****/

/***** START SECTION OPCODES *****/

/* Bytecode op argument types */
enum JanetOpArgType {
  JANET_OAT_SLOT,
  JANET_OAT_ENVIRONMENT,
  JANET_OAT_CONSTANT,
  JANET_OAT_INTEGER,
  JANET_OAT_TYPE,
  JANET_OAT_SIMPLETYPE,
  JANET_OAT_LABEL,
  JANET_OAT_FUNCDEF
};
/* Various types of instructions */
enum JanetInstructionType {
  JINT_0,   /* No args */
  JINT_S,   /* Slot(3) */
  JINT_L,   /* Label(3) */
  JINT_SS,  /* Slot(1), Slot(2) */
  JINT_SL,  /* Slot(1), Label(2) */
  JINT_ST,  /* Slot(1), Slot(2) */
  JINT_SI,  /* Slot(1), Immediate(2) */
  JINT_SD,  /* Slot(1), Closure(2) */
  JINT_SU,  /* Slot(1), Unsigned Immediate(2) */
  JINT_SSS, /* Slot(1), Slot(1), Slot(1) */
  JINT_SSI, /* Slot(1), Slot(1), Immediate(1) */
  JINT_SSU, /* Slot(1), Slot(1), Unsigned Immediate(1) */
  JINT_SES, /* Slot(1), Environment(1), Far Slot(1) */
  JINT_SC   /* Slot(1), Constant(2) */
};
/* All opcodes for the bytecode interpreter. */
enum JanetOpCode {
  JOP_NOOP,
  JOP_ERROR,
  JOP_TYPECHECK,
  JOP_RETURN,
  JOP_RETURN_NIL,
  JOP_ADD_IMMEDIATE,
  JOP_ADD,
  JOP_SUBTRACT_IMMEDIATE,
  JOP_SUBTRACT,
  JOP_MULTIPLY_IMMEDIATE,
  JOP_MULTIPLY,
  JOP_DIVIDE_IMMEDIATE,
  JOP_DIVIDE,
  JOP_DIVIDE_FLOOR,
  JOP_MODULO,
  JOP_REMAINDER,
  JOP_BAND,
  JOP_BOR,
  JOP_BXOR,
  JOP_BNOT,
  JOP_SHIFT_LEFT,
  JOP_SHIFT_LEFT_IMMEDIATE,
  JOP_SHIFT_RIGHT,
  JOP_SHIFT_RIGHT_IMMEDIATE,
  JOP_SHIFT_RIGHT_UNSIGNED,
  JOP_SHIFT_RIGHT_UNSIGNED_IMMEDIATE,
  JOP_MOVE_FAR,
  JOP_MOVE_NEAR,
  JOP_JUMP,
  JOP_JUMP_IF,
  JOP_JUMP_IF_NOT,
  JOP_JUMP_IF_NIL,
  JOP_JUMP_IF_NOT_NIL,
  JOP_GREATER_THAN,
  JOP_GREATER_THAN_IMMEDIATE,
  JOP_LESS_THAN,
  JOP_LESS_THAN_IMMEDIATE,
  JOP_EQUALS,
  JOP_EQUALS_IMMEDIATE,
  JOP_COMPARE,
  JOP_LOAD_NIL,
  JOP_LOAD_TRUE,
  JOP_LOAD_FALSE,
  JOP_LOAD_INTEGER,
  JOP_LOAD_CONSTANT,
  JOP_LOAD_UPVALUE,
  JOP_LOAD_SELF,
  JOP_SET_UPVALUE,
  JOP_CLOSURE,
  JOP_PUSH,
  JOP_PUSH_2,
  JOP_PUSH_3,
  JOP_PUSH_ARRAY,
  JOP_CALL,
  JOP_TAILCALL,
  JOP_RESUME,
  JOP_SIGNAL,
  JOP_PROPAGATE,
  JOP_IN,
  JOP_GET,
  JOP_PUT,
  JOP_GET_INDEX,
  JOP_PUT_INDEX,
  JOP_LENGTH,
  JOP_MAKE_ARRAY,
  JOP_MAKE_BUFFER,
  JOP_MAKE_STRING,
  JOP_MAKE_STRUCT,
  JOP_MAKE_TABLE,
  JOP_MAKE_TUPLE,
  JOP_MAKE_BRACKET_TUPLE,
  JOP_GREATER_THAN_EQUAL,
  JOP_LESS_THAN_EQUAL,
  JOP_NEXT,
  JOP_NOT_EQUALS,
  JOP_NOT_EQUALS_IMMEDIATE,
  JOP_CANCEL,
  JOP_INSTRUCTION_COUNT
};
/* Info about all instructions */
extern enum JanetInstructionType janet_instructions[JOP_INSTRUCTION_COUNT];
extern JANET_API const JanetAbstractType janet_stream_type;
extern JANET_API const JanetAbstractType janet_channel_type;
/* Run the event loop */
JANET_API void janet_loop(void);
/* Run the event loop, but allow for user scheduled interrupts triggered
 * by janet_loop1_interrupt being called in library code, a signal handler, or
 * another thread.
 *
 * Example:
 *
 * while (!janet_loop_done()) {
 *   // One turn of the event loop
 *   JanetFiber *interrupted_fiber = janet_loop1();
 *   // interrupted_fiber may be NULL
 *   // do some work here periodically...
 *   if (NULL != interrupted_fiber) {
 *     if (cancel_interrupted_fiber) {
 *       janet_cancel(interrupted_fiber, janet_cstringv("fiber was interrupted
 * for [reason]")); } else { janet_schedule(interrupted_fiber,
 * janet_wrap_nil());
 *     }
 *   }
 * }
 *
 */
JANET_API int janet_loop_done(void);
JANET_API JanetFiber *janet_loop1(void);
JANET_API void janet_loop1_interrupt(JanetVM *vm);