janet_bindings/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetMethod"][::std::mem::size_of::<JanetMethod>() - 16usize];
    ["Alignment of JanetMethod"][::std::mem::align_of::<JanetMethod>() - 8usize];
    ["Offset of field: JanetMethod::name"][::std::mem::offset_of!(JanetMethod, name) - 0usize];
    ["Offset of field: JanetMethod::cfun"][::std::mem::offset_of!(JanetMethod, cfun) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetView {
    pub items: *const Janet,
    pub len: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetView"][::std::mem::size_of::<JanetView>() - 16usize];
    ["Alignment of JanetView"][::std::mem::align_of::<JanetView>() - 8usize];
    ["Offset of field: JanetView::items"][::std::mem::offset_of!(JanetView, items) - 0usize];
    ["Offset of field: JanetView::len"][::std::mem::offset_of!(JanetView, len) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetByteView {
    pub bytes: *const u8,
    pub len: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetByteView"][::std::mem::size_of::<JanetByteView>() - 16usize];
    ["Alignment of JanetByteView"][::std::mem::align_of::<JanetByteView>() - 8usize];
    ["Offset of field: JanetByteView::bytes"]
        [::std::mem::offset_of!(JanetByteView, bytes) - 0usize];
    ["Offset of field: JanetByteView::len"][::std::mem::offset_of!(JanetByteView, len) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetDictView {
    pub kvs: *const JanetKV,
    pub len: i32,
    pub cap: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetDictView"][::std::mem::size_of::<JanetDictView>() - 16usize];
    ["Alignment of JanetDictView"][::std::mem::align_of::<JanetDictView>() - 8usize];
    ["Offset of field: JanetDictView::kvs"][::std::mem::offset_of!(JanetDictView, kvs) - 0usize];
    ["Offset of field: JanetDictView::len"][::std::mem::offset_of!(JanetDictView, len) - 8usize];
    ["Offset of field: JanetDictView::cap"][::std::mem::offset_of!(JanetDictView, cap) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetRange {
    pub start: i32,
    pub end: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetRange"][::std::mem::size_of::<JanetRange>() - 8usize];
    ["Alignment of JanetRange"][::std::mem::align_of::<JanetRange>() - 4usize];
    ["Offset of field: JanetRange::start"][::std::mem::offset_of!(JanetRange, start) - 0usize];
    ["Offset of field: JanetRange::end"][::std::mem::offset_of!(JanetRange, end) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetRNG {
    pub a: u32,
    pub b: u32,
    pub c: u32,
    pub d: u32,
    pub counter: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetRNG"][::std::mem::size_of::<JanetRNG>() - 20usize];
    ["Alignment of JanetRNG"][::std::mem::align_of::<JanetRNG>() - 4usize];
    ["Offset of field: JanetRNG::a"][::std::mem::offset_of!(JanetRNG, a) - 0usize];
    ["Offset of field: JanetRNG::b"][::std::mem::offset_of!(JanetRNG, b) - 4usize];
    ["Offset of field: JanetRNG::c"][::std::mem::offset_of!(JanetRNG, c) - 8usize];
    ["Offset of field: JanetRNG::d"][::std::mem::offset_of!(JanetRNG, d) - 12usize];
    ["Offset of field: JanetRNG::counter"][::std::mem::offset_of!(JanetRNG, counter) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetFile {
    pub file: *mut FILE,
    pub flags: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetFile"][::std::mem::size_of::<JanetFile>() - 16usize];
    ["Alignment of JanetFile"][::std::mem::align_of::<JanetFile>() - 8usize];
    ["Offset of field: JanetFile::file"][::std::mem::offset_of!(JanetFile, file) - 0usize];
    ["Offset of field: JanetFile::flags"][::std::mem::offset_of!(JanetFile, flags) - 8usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetTryState {
    pub stackn: i32,
    pub gc_handle: ::std::os::raw::c_int,
    pub vm_fiber: *mut JanetFiber,
    pub vm_jmp_buf: *mut jmp_buf,
    pub vm_return_reg: *mut Janet,
    pub buf: jmp_buf,
    pub payload: Janet,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetTryState"][::std::mem::size_of::<JanetTryState>() - 240usize];
    ["Alignment of JanetTryState"][::std::mem::align_of::<JanetTryState>() - 8usize];
    ["Offset of field: JanetTryState::stackn"]
        [::std::mem::offset_of!(JanetTryState, stackn) - 0usize];
    ["Offset of field: JanetTryState::gc_handle"]
        [::std::mem::offset_of!(JanetTryState, gc_handle) - 4usize];
    ["Offset of field: JanetTryState::vm_fiber"]
        [::std::mem::offset_of!(JanetTryState, vm_fiber) - 8usize];
    ["Offset of field: JanetTryState::vm_jmp_buf"]
        [::std::mem::offset_of!(JanetTryState, vm_jmp_buf) - 16usize];
    ["Offset of field: JanetTryState::vm_return_reg"]
        [::std::mem::offset_of!(JanetTryState, vm_return_reg) - 24usize];
    ["Offset of field: JanetTryState::buf"][::std::mem::offset_of!(JanetTryState, buf) - 32usize];
    ["Offset of field: JanetTryState::payload"]
        [::std::mem::offset_of!(JanetTryState, payload) - 232usize];
};
pub const JanetOpArgType_JANET_OAT_SLOT: JanetOpArgType = 0;
pub const JanetOpArgType_JANET_OAT_ENVIRONMENT: JanetOpArgType = 1;
pub const JanetOpArgType_JANET_OAT_CONSTANT: JanetOpArgType = 2;
pub const JanetOpArgType_JANET_OAT_INTEGER: JanetOpArgType = 3;
pub const JanetOpArgType_JANET_OAT_TYPE: JanetOpArgType = 4;
pub const JanetOpArgType_JANET_OAT_SIMPLETYPE: JanetOpArgType = 5;
pub const JanetOpArgType_JANET_OAT_LABEL: JanetOpArgType = 6;
pub const JanetOpArgType_JANET_OAT_FUNCDEF: JanetOpArgType = 7;
#[doc = " START SECTION OPCODES"]
pub type JanetOpArgType = ::std::os::raw::c_uint;
pub const JanetInstructionType_JINT_0: JanetInstructionType = 0;
pub const JanetInstructionType_JINT_S: JanetInstructionType = 1;
pub const JanetInstructionType_JINT_L: JanetInstructionType = 2;
pub const JanetInstructionType_JINT_SS: JanetInstructionType = 3;
pub const JanetInstructionType_JINT_SL: JanetInstructionType = 4;
pub const JanetInstructionType_JINT_ST: JanetInstructionType = 5;
pub const JanetInstructionType_JINT_SI: JanetInstructionType = 6;
pub const JanetInstructionType_JINT_SD: JanetInstructionType = 7;
pub const JanetInstructionType_JINT_SU: JanetInstructionType = 8;
pub const JanetInstructionType_JINT_SSS: JanetInstructionType = 9;
pub const JanetInstructionType_JINT_SSI: JanetInstructionType = 10;
pub const JanetInstructionType_JINT_SSU: JanetInstructionType = 11;
pub const JanetInstructionType_JINT_SES: JanetInstructionType = 12;
pub const JanetInstructionType_JINT_SC: JanetInstructionType = 13;
pub type JanetInstructionType = ::std::os::raw::c_uint;
pub const JanetOpCode_JOP_NOOP: JanetOpCode = 0;
pub const JanetOpCode_JOP_ERROR: JanetOpCode = 1;
pub const JanetOpCode_JOP_TYPECHECK: JanetOpCode = 2;
pub const JanetOpCode_JOP_RETURN: JanetOpCode = 3;
pub const JanetOpCode_JOP_RETURN_NIL: JanetOpCode = 4;
pub const JanetOpCode_JOP_ADD_IMMEDIATE: JanetOpCode = 5;
pub const JanetOpCode_JOP_ADD: JanetOpCode = 6;
pub const JanetOpCode_JOP_SUBTRACT_IMMEDIATE: JanetOpCode = 7;
pub const JanetOpCode_JOP_SUBTRACT: JanetOpCode = 8;
pub const JanetOpCode_JOP_MULTIPLY_IMMEDIATE: JanetOpCode = 9;
pub const JanetOpCode_JOP_MULTIPLY: JanetOpCode = 10;
pub const JanetOpCode_JOP_DIVIDE_IMMEDIATE: JanetOpCode = 11;
pub const JanetOpCode_JOP_DIVIDE: JanetOpCode = 12;
pub const JanetOpCode_JOP_DIVIDE_FLOOR: JanetOpCode = 13;
pub const JanetOpCode_JOP_MODULO: JanetOpCode = 14;
pub const JanetOpCode_JOP_REMAINDER: JanetOpCode = 15;
pub const JanetOpCode_JOP_BAND: JanetOpCode = 16;
pub const JanetOpCode_JOP_BOR: JanetOpCode = 17;
pub const JanetOpCode_JOP_BXOR: JanetOpCode = 18;
pub const JanetOpCode_JOP_BNOT: JanetOpCode = 19;
pub const JanetOpCode_JOP_SHIFT_LEFT: JanetOpCode = 20;
pub const JanetOpCode_JOP_SHIFT_LEFT_IMMEDIATE: JanetOpCode = 21;
pub const JanetOpCode_JOP_SHIFT_RIGHT: JanetOpCode = 22;
pub const JanetOpCode_JOP_SHIFT_RIGHT_IMMEDIATE: JanetOpCode = 23;
pub const JanetOpCode_JOP_SHIFT_RIGHT_UNSIGNED: JanetOpCode = 24;
pub const JanetOpCode_JOP_SHIFT_RIGHT_UNSIGNED_IMMEDIATE: JanetOpCode = 25;
pub const JanetOpCode_JOP_MOVE_FAR: JanetOpCode = 26;
pub const JanetOpCode_JOP_MOVE_NEAR: JanetOpCode = 27;
pub const JanetOpCode_JOP_JUMP: JanetOpCode = 28;
pub const JanetOpCode_JOP_JUMP_IF: JanetOpCode = 29;
pub const JanetOpCode_JOP_JUMP_IF_NOT: JanetOpCode = 30;
pub const JanetOpCode_JOP_JUMP_IF_NIL: JanetOpCode = 31;
pub const JanetOpCode_JOP_JUMP_IF_NOT_NIL: JanetOpCode = 32;
pub const JanetOpCode_JOP_GREATER_THAN: JanetOpCode = 33;
pub const JanetOpCode_JOP_GREATER_THAN_IMMEDIATE: JanetOpCode = 34;
pub const JanetOpCode_JOP_LESS_THAN: JanetOpCode = 35;
pub const JanetOpCode_JOP_LESS_THAN_IMMEDIATE: JanetOpCode = 36;
pub const JanetOpCode_JOP_EQUALS: JanetOpCode = 37;
pub const JanetOpCode_JOP_EQUALS_IMMEDIATE: JanetOpCode = 38;
pub const JanetOpCode_JOP_COMPARE: JanetOpCode = 39;
pub const JanetOpCode_JOP_LOAD_NIL: JanetOpCode = 40;
pub const JanetOpCode_JOP_LOAD_TRUE: JanetOpCode = 41;
pub const JanetOpCode_JOP_LOAD_FALSE: JanetOpCode = 42;
pub const JanetOpCode_JOP_LOAD_INTEGER: JanetOpCode = 43;
pub const JanetOpCode_JOP_LOAD_CONSTANT: JanetOpCode = 44;
pub const JanetOpCode_JOP_LOAD_UPVALUE: JanetOpCode = 45;
pub const JanetOpCode_JOP_LOAD_SELF: JanetOpCode = 46;
pub const JanetOpCode_JOP_SET_UPVALUE: JanetOpCode = 47;
pub const JanetOpCode_JOP_CLOSURE: JanetOpCode = 48;
pub const JanetOpCode_JOP_PUSH: JanetOpCode = 49;
pub const JanetOpCode_JOP_PUSH_2: JanetOpCode = 50;
pub const JanetOpCode_JOP_PUSH_3: JanetOpCode = 51;
pub const JanetOpCode_JOP_PUSH_ARRAY: JanetOpCode = 52;
pub const JanetOpCode_JOP_CALL: JanetOpCode = 53;
pub const JanetOpCode_JOP_TAILCALL: JanetOpCode = 54;
pub const JanetOpCode_JOP_RESUME: JanetOpCode = 55;
pub const JanetOpCode_JOP_SIGNAL: JanetOpCode = 56;
pub const JanetOpCode_JOP_PROPAGATE: JanetOpCode = 57;
pub const JanetOpCode_JOP_IN: JanetOpCode = 58;
pub const JanetOpCode_JOP_GET: JanetOpCode = 59;
pub const JanetOpCode_JOP_PUT: JanetOpCode = 60;
pub const JanetOpCode_JOP_GET_INDEX: JanetOpCode = 61;
pub const JanetOpCode_JOP_PUT_INDEX: JanetOpCode = 62;
pub const JanetOpCode_JOP_LENGTH: JanetOpCode = 63;
pub const JanetOpCode_JOP_MAKE_ARRAY: JanetOpCode = 64;
pub const JanetOpCode_JOP_MAKE_BUFFER: JanetOpCode = 65;
pub const JanetOpCode_JOP_MAKE_STRING: JanetOpCode = 66;
pub const JanetOpCode_JOP_MAKE_STRUCT: JanetOpCode = 67;
pub const JanetOpCode_JOP_MAKE_TABLE: JanetOpCode = 68;
pub const JanetOpCode_JOP_MAKE_TUPLE: JanetOpCode = 69;
pub const JanetOpCode_JOP_MAKE_BRACKET_TUPLE: JanetOpCode = 70;
pub const JanetOpCode_JOP_GREATER_THAN_EQUAL: JanetOpCode = 71;
pub const JanetOpCode_JOP_LESS_THAN_EQUAL: JanetOpCode = 72;
pub const JanetOpCode_JOP_NEXT: JanetOpCode = 73;
pub const JanetOpCode_JOP_NOT_EQUALS: JanetOpCode = 74;
pub const JanetOpCode_JOP_NOT_EQUALS_IMMEDIATE: JanetOpCode = 75;
pub const JanetOpCode_JOP_CANCEL: JanetOpCode = 76;
pub const JanetOpCode_JOP_INSTRUCTION_COUNT: JanetOpCode = 77;
pub type JanetOpCode = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub static mut janet_instructions: [JanetInstructionType; 77usize];
}
unsafe extern "C" {
    pub static janet_stream_type: JanetAbstractType;
}
unsafe extern "C" {
    pub static janet_channel_type: JanetAbstractType;
}
unsafe extern "C" {
    pub fn janet_loop();
}
unsafe extern "C" {
    pub fn janet_loop_done() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_loop1() -> *mut JanetFiber;
}
unsafe extern "C" {
    pub fn janet_loop1_interrupt(vm: *mut JanetVM);
}
